# speclib

./: .codacy.yml  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codacy.yml  docs.yml  publish.yml  validate-contribution.yml  zenodo-update.yml
ai-dev/: architecture.md  field-schema.md  patterns.md  prompt-templates.md  spec.md
ai-dev/agents/: README.md  spectral_expert.md
ai-dev/decisions/: DL-001-dual-storage-format.md  DL-002-static-hybrid-api.md  DL-003-federated-ingestion.md  DL-004-specpr-compatibility.md  DL-005-standalone-no-deps.md
ai-dev/guardrails/: README.md  coding-standards.md  compliance.md  data-handling.md
ai-dev/skills/: README.md  spectral-data-skill.md
data/contributions/TEMPLATE/: contribution.yaml  example_spectrum.csv
data/ky/invasives/: manifest.yaml
data/sensors/: landsat8_oli.yaml  sentinel2_msi.yaml
data/upstream/: aster_jpl.yaml  ecostress.yaml  emit_l2b.yaml  usgs_splib07.yaml
docs/: contributing.md  format-spec.md  getting-started.md  index.md  kentucky.md  library.md
docs/api/: index.md
docs/data/: catalog.json  taxonomy.json
docs/data/spectra/: ky_field_ky_invasive_lonicera_maackii_raven1_lower1_7eef75d1.json  ky_field_ky_invasive_lonicera_maackii_raven1_lower2_0eb51e63.json  ky_field_ky_invasive_lonicera_maackii_raven1_lower3_eec93aae.json  ky_field_ky_invasive_lonicera_maackii_raven1_lower4_751995f1.json  ky_field_ky_invasive_lonicera_maackii_raven1_lower5_245bbc90.json  ky_field_ky_invasive_lonicera_maackii_raven1_mid1_4fd354fc.json  ky_field_ky_invasive_lonicera_maackii_raven1_mid2_66ffc3bf.json  ky_field_ky_invasive_lonicera_maackii_raven1_mid3_3da2768d.json  ky_field_ky_invasive_lonicera_maackii_raven1_mid4_7dea5f2c.json  ky_field_ky_invasive_lonicera_maackii_raven1_mid5_7829ae78.json  ky_field_ky_invasive_lonicera_maackii_raven1_upper1_276845f2.json  ky_field_ky_invasive_lonicera_maackii_raven1_upper2_70b67b71.json  ky_field_ky_invasive_lonicera_maackii_raven1_upper3_05fbc680.json  ky_field_ky_invasive_lonicera_maackii_raven1_upper4_f1bb4947.json  ky_field_ky_invasive_lonicera_maackii_raven1_upper5_137b0151.json  ky_field_ky_invasive_lonicera_maackii_raven2_lower1_9f6ea578.json  ky_field_ky_invasive_lonicera_maackii_raven2_lower2_74bb6534.json  ky_field_ky_invasive_lonicera_maackii_raven2_lower3_5b5255ee.json  ky_field_ky_invasive_lonicera_maackii_raven2_lower4_f80f45aa.json  ky_field_ky_invasive_lonicera_maackii_raven2_lower5_99e0ff0f.json  ky_field_ky_invasive_lonicera_maackii_raven2_mid1_5a4886db.json  ky_field_ky_invasive_lonicera_maackii_raven2_mid2_258a9d0f.json  ky_field_ky_invasive_lonicera_maackii_raven2_mid3_512a33f7.json  ky_field_ky_invasive_lonicera_maackii_raven2_mid4_c40e3a12.json  ky_field_ky_invasive_lonicera_maackii_raven2_mid5_ffee641d.json  ky_field_ky_invasive_lonicera_maackii_raven2_upper1_e4bb6c22.json  ky_field_ky_invasive_lonicera_maackii_raven2_upper2_4af316ea.json  ky_field_ky_invasive_lonicera_maackii_raven2_upper3_7b5a15dd.json  ky_field_ky_invasive_lonicera_maackii_raven2_upper4_abdf6c51.json  ky_field_ky_invasive_lonicera_maackii_raven2_upper5_358a8a66.json  ky_field_ky_invasive_lonicera_maackii_raven3_lower1_8b35b76b.json  ky_field_ky_invasive_lonicera_maackii_raven3_lower2_bcc7c684.json  ky_field_ky_invasive_lonicera_maackii_raven3_lower3_1f51c34e.json  (+1939 more)
docs/guide/: cli.md  data-model.md  export.md  ingestion.md  installation.md  quality-standards.md  resampling.md
docs/js/: spectral-viewer.js
docs/overrides/: library.html
docs/stylesheets/: extra.css  library.css
speclib-rs/: Cargo.toml
speclib-rs/speclib-cli/: Cargo.toml  README.md
speclib-rs/speclib-cli/src/: main.rs
speclib-rs/speclib-core/: Cargo.toml  README.md
speclib-rs/speclib-core/src/: error.rs  id.rs  json.rs  lib.rs  matching.rs  parquet.rs  types.rs
speclib-rs/speclib-core/tests/: conformance.rs
src/speclib/: __init__.py  cli.py
src/speclib/core/: __init__.py  (+3 more)
tests/: __init__.py  test_conformance.py  test_ecostress_adapter.py  test_export.py  test_hdf5.py  test_ingest.py  test_json_export.py  test_spectrum.py  test_storage.py
tests/conformance/: __init__.py  build_reference.py  validate.py
web/api/: main.py
web/static/: index.html  methodology.html
(+29 files in other folders)
