[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speclib"
version = "1.0.0"
description = "Federated spectral signature library with Kentucky-focused collections"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Chris Lyons", email = "chris.lyons@ky.gov" },
]
keywords = [
    "spectroscopy",
    "spectral-library",
    "remote-sensing",
    "USGS",
    "reflectance",
    "minerals",
    "vegetation",
    "hyperspectral",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "h5py>=3.10",
    "pyarrow>=15.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
]
emit = [
    "netcdf4>=1.6",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "pre-commit>=3.6",
]
docs = [
    "zensical",
]
all = [
    "speclib[server,emit,dev,docs]",
]

[project.scripts]
speclib = "speclib.cli:main"

[project.urls]
Homepage = "https://github.com/chrislyonsKY/speclib"
Documentation = "https://chrislyonsKY.github.io/speclib/"
Repository = "https://github.com/chrislyonsKY/speclib"
Issues = "https://github.com/chrislyonsKY/speclib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/speclib"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["speclib"]
omit = ["*/cli.py"]

[tool.coverage.report]
# Target: 80% once core modules are implemented
fail_under = 0
