[package]
name = "speclib-core"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-only"
description = "Core types and I/O for the speclib federated spectral signature library"
repository = "https://github.com/chrislyonsKY/speclib"
readme = "README.md"
keywords = ["spectral", "remote-sensing", "spectroscopy", "geospatial"]
categories = ["science", "parser-implementations"]

[dependencies]
arrow = { version = "54", default-features = false, features = ["prettyprint"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
